--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-TWITTER_CONSUMER_KEY=""
-TWITTER_CONSUMER_SECRET=""
-TWITTER_ACCESS_TOKEN=""
-TWITTER_ACCESS_TOKEN_SECRET=""
-DB_PASSWORD=""
-BD_USERNAME=""
-DB_HOSTNAME=""
-DB_SCHEMA="seizetheball"
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_TOKEN_SECRET=
+DB_PASSWORD=
+BD_USERNAME=
+DB_HOSTNAME=
+DB_SCHEMA=
