debugging connection issues

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
 TWITTER_ACCESS_TOKEN=
 TWITTER_ACCESS_TOKEN_SECRET=
-DB_PASSWORD=
-BD_USERNAME=
-DB_HOSTNAME=
-DB_SCHEMA=
+DATABASE_PASSWORD=
+DATABASE_USERNAME=
+DATABASE_HOSTNAME=
+DATABASE_SCHEMA=
