--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,15 +1,17 @@
+# --- frontend ---
+PROJECT:=seizetheball
 
 deploy:
-	gcloud app deploy --project=seizetheball
+	gcloud app deploy --project=$(PROJECT)
 
 serve:
 	dev_appserver.py app.yaml
 
 browse:
-	gcloud app browse --project=seizetheball
+	gcloud app browse --project=$(PROJECT)
 
 create:
-	gcloud app create --project=seizetheball --region=europe-west2
+	gcloud app create --project=$(PROJECT) --region=$(ZONE)
 
 viewlogs:
 	gcloud app logs tail -s default
